Added voltage display

--- a/Podcar_esp32/platformio.ini
+++ b/Podcar_esp32/platformio.ini
@@ -15,4 +15,5 @@ framework = arduino
 monitor_speed = 115200
 lib_deps = 
 	frankjoshua/Rosserial Arduino Library@^0.9.1
-	mbed-ateyercheese/Sparkfun_TB6612@0.0.0+sha.9d2787060b3e
+	adafruit/Adafruit GFX Library@^1.11.5
+	adafruit/Adafruit BusIO@^1.14.1
